<resources>
    <string name="app_name">Quizzer</string>


    <!--Errors-->
    <string name="error_icon_desc">Error Icon</string>
    <string name="error_unknown">An Unknown Error Has Occurred, Please Try Again.</string>
    <string name="error_network">A Network Error Occurred, Please Try Again.</string>
    <string name="error_no_result">No Results. The API doesn\'t have enough questions for your query</string>
    <string name="error_invalid_arg">Invalid Quiz Setting. Please Try Again with new settings</string>

    <string name="all_label_start">Start</string>
    <string name="all_label_next">Next</string>
    <string name="all_label_score">Score</string>
    <string name="all_label_summary">Answers</string>
    <string name="all_label_result">Result</string>
    <string name="all_input_error_required">required.</string>

    <string name="all_action_clear">Clear</string>
    <string name="all_action_cancle">Cancle</string>
    <string name="all_action_ok">OK !</string>
    <string name="all_desc_categoryicon">Category Icon</string>
    <string name="all_action_refresh">Refresh</string>
    <string name="all_label_stop">Stop</string>

    <!--Specific UI-->

    <string name="history_emptylist_state">Empty History!</string>
    <string name="history_dialog_title_sort">Sort By</string>
    <string name="history_dialog_title_filter">Filter By</string>
    <string name="history_dialog_title_delete">Are You Sure you want to continue?</string>
    <string name="history_action_yes">Yup!</string>
    <string name="history_action_cancel">Cancel</string>
    <string name="history_menu_action_title_search">Search</string>
    <string name="history_menu_action_title_clear">Clear</string>
    <string name="history_menu_action_title_sort">SortBy</string>

    <string name="dialogfilter_title">Filter</string>
    <string name="all_icon_close_desc">Close Filter</string>
    <string name="dialogfilter_categoryinput_hint">Category</string>
    <string name="dialogfilter_categoryinput_label">By Category</string>
    <string name="dialogfilter_dateinput_label">By Save Date</string>
    <string name="dialogfilter_dateinput_hint">Save Date</string>

    <string name="quizDetail_snackbar_success_delete">Quiz Deleted successfully</string>
    <string name="quizDetail_snackbar_failure_update">Faild to Update quiz</string>
    <string name="quizDetail_snackbar_failure_delete">Faild to Delete quiz</string>
    <string name="quizDetail_dialog_title_delete">Are you sure ?</string>

    <string name="quiz_progress_placeholder">%d/%d</string>
    <string name="quiz_countdown_placeholder">00:%d</string>

    <string name="quizsetting_amount_input_error">Maximum number of question is 50</string>
    <string name="quizsetting_amount_input_hint">Number Of Questions</string>
    <string name="quizsetting_difficulty_input_hint">Questions Difficulty</string>
    <string name="quizsetting_type_input_hint">Questions Type</string>
    <string name="quizsetting_countdown_input_hint">Question CountDown</string>

    <string name="score_totalquestions_label">Total Questions</string>
    <string name="score_correctanswers_label">Correct Answers</string>
    <string name="score_incorrectanswers_label">InCorrect Answers</string>
    <string name="score_snackbar_success_save">Quiz Saved successfully</string>
    <string name="score_snackbar_failure_save">Faild to save quiz</string>
    <string name="score_percentage">%d%% Score</string>
    <string name="score_numberofquestion">%d Questions</string>
    <string name="score_correct_answers">%d Correct Answers</string>
    <string name="score_incorrect_answers">%d InCorrect Answers</string>


    <string name="score_status_morethen50_label">Congrats!</string>
    <string name="score_status_lessthen50_label">Good luck next time!</string>

    <string name="cardquestion_desc_iconanswerresult">Icon That Indicat if the Answer Correct or Not</string>

    <string name="menu_main">Menu</string>
    <string name="main_menu_action_title_history">History</string>
    <string name="main_menu_action_title_setting">Setting</string>

    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="app_logo_desc">AppLogo</string>
    <string name="all_item_title_close">Close</string>
    <string name="cardhistory_desc_deleteitem">Delete History Item</string>
    <!--Specific UI-->
</resources>