<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize" />

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:scrollbarFadeDuration="0"
                android:scrollbars="vertical"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/layoutCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/imageView_categoryIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:contentDescription="@string/all_desc_categoryicon"
                            app:srcCompat="@drawable/ic_gk" />

                        <TextView
                            android:id="@+id/textView_categoryName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            tools:text="Category" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutInputs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/layoutCategory">


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayout_questionsNumber"
                            style="@style/Widget.Quizzer.TextInputLayout.QuizSetting"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:hint="@string/quizsetting_amount_input_hint"
                            app:errorEnabled="true"
                            app:suffixText="questions">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editText_questionsNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayout_questionsCountDown"
                            style="@style/Widget.Quizzer.AutoCompleteTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:suffixText="seconds">

                            <AutoCompleteTextView
                                android:id="@+id/editText_questionsCountDown"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/quizsetting_countdown_input_hint"
                                android:inputType="none" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayout_questionsType"
                            style="@style/Widget.Quizzer.AutoCompleteTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <AutoCompleteTextView
                                android:id="@+id/editText_questionsType"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/quizsetting_type_input_hint"

                                android:inputType="none" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayout_questionsDifficulty"
                            style="@style/Widget.Quizzer.AutoCompleteTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <AutoCompleteTextView
                                android:id="@+id/editText_questionsDifficulty"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/quizsetting_difficulty_input_hint"
                                android:inputType="none" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/btnStartQuiz"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/all_label_start"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/layoutInputs" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>