<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.history.detail.QuizDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView_topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:cardCornerRadius="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/layoutCategory"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/viewClosePage"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/imageView_categoryIcon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:contentDescription="@string/all_desc_categoryicon"
                        app:srcCompat="@drawable/ic_gk" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"

                        android:layout_marginLeft="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView_categoryName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                            tools:text="Category" />

                        <TextView
                            android:id="@+id/textView_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                            tools:text="2020-06-20" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/viewClosePage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:contentDescription="@string/all_icon_close_desc"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_round_close" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView_quizDetail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView_topAppBar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_score"
                    style="@style/TextAppearance.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="50% Score" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_userScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:cardBackgroundColor="?attr/colorSurface"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_score">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView_questions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                            android:textColor="?attr/colorPrimary"
                            tools:text="50 Question" />

                        <TextView
                            android:id="@+id/textView_correctAnswers"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                            android:textColor="?attr/colorGreenThings"
                            tools:text="40 Correct Questions" />

                        <TextView
                            android:id="@+id/textView_wrongAnswers"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                            android:textColor="?attr/colorRedThings"
                            tools:text="40 Wrong Questions" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textView_summaryTitle"
                    style="@style/TextAppearance.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/all_label_summary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView_userScore" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:focusable="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_summaryTitle"
                    tools:itemCount="4"
                    tools:listitem="@layout/card_question" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>